# sud

./: COPYING  Cargo.toml  Makefile  build.rs  sud.conf.example
include/sud/: args.h  auth.h  config.h  exec.h  sud.h  utils.h
src/: args.c  args.rs  auth.c  auth.rs  client.c  client.rs  config.c  config.rs  exec.c  exec.rs  main.c  main.rs  persist.rs  server.c  server.rs  sud.c  sud.rs  utils.c  utils.rs
src/c_ffi/: crypt.rs  mod.rs  pam.rs
systemd/: sud-persist.service.template  sud-persist.socket  sud.service.template  sud.socket  sud@.service.template
