# SPDX-License-Identifier: GPL-3.0-only
#
# sud/Makefile
#
# Copyright (C) Emily <info@emy.sh>

[package]
name = "sud"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
ctrlc = "3.4.6"
libc = "0.2.171"
libsystemd = "0.7.0"
nix = { version = "0.29", features = ["poll", "fs", "process", "user", "signal", "socket"] }
passwd-rs = "0.2.0"
secure-string = "0.3.0"
termios = "0.3.3"
